force-app/main/default/objects/Customer_Model_Product__c/Customer_Model_Product__c.object-meta.xml
<CustomObject>
    <label>产品客户型号</label>
    <nameField>
        <label>Customer Product Model</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>