force-app/main/default/objects/Customer_Model_Product__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Salesforce Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hisense USA</fullName>
            </value>
            <value>
                <fullName>Hisense Mexico</fullName>
            </value>
            <value>
                <fullName>Hisense Australia</fullName>
            </value>
            <value>
                <fullName>Hisense Malaysia</fullName>
            </value>
            <value>
                <fullName>Hisense South Africa</fullName>
            </value>
            <value>
                <fullName>American Sales Department</fullName>
            </value>
            <value>
                <fullName>Middle East and Africa Sales Department</fullName>
            </value>
            <value>
                <fullName>Asia-Pacific Sales Department</fullName>
            </value>
            <value>
                <fullName>Key Account Sales Department</fullName>
            </value>
            <value>
                <fullName>Europe Sales Department</fullName>
            </value>
            <value>
                <fullName>GORENJE, D.D.</fullName>
            </value>
            <value>
                <fullName>Hisense Argentina</fullName>
            </value>
            <value>
                <fullName>LOEWE</fullName>
            </value>
            <value>
                <fullName>Hisense Germany</fullName>
            </value>
            <value>
                <fullName>Hisense Dubai</fullName>
            </value>
            <value>
                <fullName>Hisense Russia</fullName>
            </value>
            <value>
                <fullName>Hisense France</fullName>
            </value>
            <value>
                <fullName>Hisense Canada</fullName>
            </value>
            <value>
                <fullName>Hisense Czech</fullName>
            </value>
            <value>
                <fullName>Hisense Japan</fullName>
            </value>
            <value>
                <fullName>Hisense Thailand</fullName>
            </value>
            <value>
                <fullName>Hisense Spain</fullName>
            </value>
            <value>
                <fullName>Hisense Italy</fullName>
            </value>
            <value>
                <fullName>Hisense India</fullName>
            </value>
            <value>
                <fullName>Hisense Indonesia</fullName>
            </value>
            <value>
                <fullName>Hisense UK</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>