force-app/main/default/objects/Customer_Model_Product__c/fields/Product_Factory_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Factory_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Export Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Customer Model Product</relationshipLabel>
    <relationshipName>Customer_Model_Product</relationshipName>
    <type>Lookup</type>
</CustomField>