force-app/main/default/objects/Customer_Model_Product__c/fields/Selling_Point__c.field-meta.xml
<CustomField>
    <fullName>Selling_Point__c</fullName>
    <label>Selling Point</label>
    <type>TextArea</type>
</CustomField>