force-app/main/default/objects/Customer_Model_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand__c</columns>
    <columns>Product_Factory_Model__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>